--- a/app/src/main/res/layout/fragment_delete.xml
+++ b/app/src/main/res/layout/fragment_delete.xml
@@ -9,8 +9,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="30dp"
-        style="@style/TextAppearance.AppCompat.Headline"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:typeface="serif"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:text="@string/are_you_sure" />
 
 </LinearLayout>
