--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -32,10 +32,11 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
+            android:onClick="@{() -> contactViewModel.onClickCreateNewContact()}"
             android:src="@drawable/ic_person_add"
             app:fabCustomSize="60dp"
-            android:onClick="@{() -> contactViewModel.onClickCreateNewContact()}"
-            app:tint="@color/white" />
+            app:tint="@color/white"
+            android:contentDescription="@string/insert_contact" />
 
     </RelativeLayout>
 </layout>
