--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -33,10 +32,11 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:padding="3dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/contact_image_in_recycler_view" />
 
         <TextView
-            android:id="@+id/contact_name"
+            android:id="@+id/contact_name_recycler"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -44,7 +44,12 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/contact_image"
-            android:text="@string/name" />
+            android:layout_toStartOf="@id/checkbox"
+            android:text="@string/name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
 
         <CheckBox
             android:id="@+id/checkbox"
