--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -20,7 +20,7 @@
         android:id="@+id/menu_select_all"
         android:title="@string/select_all"
         android:icon="@drawable/ic_check_circle"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom|withText"/>
 
     <item
         android:id="@+id/menu_unSelectAll"
