--- a/app/src/main/res/layout-land/fragment_new_contact.xml
+++ b/app/src/main/res/layout-land/fragment_new_contact.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -55,83 +56,93 @@
 
         <ImageView
             android:id="@+id/iv_name"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image"
-            app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@id/gl_left_horizontal_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_person"
-            android:contentDescription="@string/icon_for_person" />
+            android:layout_marginTop="12dp"
+            android:contentDescription="@string/icon_for_person"
+            app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image"
+            app:layout_constraintTop_toBottomOf="@id/gl_left_horizontal_top"
+            app:srcCompat="@drawable/ic_person" />
 
         <TextView
             android:id="@+id/tv_name"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
-            app:layout_constraintTop_toTopOf="@id/iv_name"
-            app:layout_constraintBottom_toBottomOf="@id/iv_name"
-            android:typeface="serif"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name" />
+            android:text="@string/name"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:typeface="serif"
+            app:layout_constraintBottom_toBottomOf="@id/iv_name"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
+            app:layout_constraintTop_toTopOf="@id/iv_name" />
 
         <LinearLayout
+            android:id="@+id/layout_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/layout_name"
             android:orientation="horizontal"
             app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
             app:layout_constraintTop_toBottomOf="@id/tv_name">
 
             <LinearLayout
+                android:id="@+id/layout_add_full_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/layout_add_full_name"
                 android:layout_marginTop="12dp"
-                android:visibility="gone"
                 android:layout_weight="4"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <EditText
                     android:id="@+id/editText_name_prefix"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="name"
                     android:ems="10"
+                    android:hint="@string/name_prefix"
                     android:inputType="textPersonName"
-                    android:hint="@string/name_prefix" />
+                    android:textColorHint="@color/gray" />
 
                 <EditText
                     android:id="@+id/editText_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="name"
                     android:ems="10"
+                    android:hint="@string/first_name"
                     android:inputType="textPersonName"
-                    android:hint="@string/first_name" />
+                    android:textColorHint="@color/gray" />
 
                 <EditText
                     android:id="@+id/editText_middle_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="name"
                     android:ems="10"
+                    android:hint="@string/middle_name"
                     android:inputType="textPersonName"
-                    android:hint="@string/middle_name" />
+                    android:textColorHint="@color/gray" />
 
                 <EditText
                     android:id="@+id/editText_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="name"
                     android:ems="10"
+                    android:hint="@string/last_name"
                     android:inputType="textPersonName"
-                    android:hint="@string/last_name" />
+                    android:textColorHint="@color/gray" />
 
                 <EditText
                     android:id="@+id/editText_name_suffix"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="name"
                     android:ems="10"
+                    android:hint="@string/name_suffix"
                     android:inputType="textPersonName"
-                    android:hint="@string/name_suffix" />
+                    android:textColorHint="@color/gray" />
             </LinearLayout>
 
             <EditText
@@ -139,18 +150,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:visibility="visible"
+                android:autofillHints="name"
                 android:ems="10"
+                android:hint="@string/name"
                 android:inputType="textPersonName"
-                android:hint="@string/name" />
+                android:textColorHint="@color/gray"
+                android:visibility="visible"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <ImageView
                 android:id="@+id/imageView_insert_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                app:srcCompat="@drawable/ic_arrow_drop_down"
-                android:contentDescription="@string/icon_for_name_subsections" />
+                android:contentDescription="@string/icon_for_name_subsections"
+                app:srcCompat="@drawable/ic_arrow_drop_down" />
 
         </LinearLayout>
 
@@ -158,10 +172,10 @@
             android:id="@+id/tv_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:typeface="serif"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:text="@string/phone"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:typeface="serif"
             app:layout_constraintBottom_toBottomOf="@id/iv_phone"
             app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
             app:layout_constraintTop_toTopOf="@id/iv_phone" />
@@ -171,30 +185,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:contentDescription="@string/icon_for_call_number"
             app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text_center"
             app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image_center"
             app:layout_constraintTop_toBottomOf="@id/gl_left_horizontal_top"
-            app:srcCompat="@drawable/ic_call"
-            android:contentDescription="@string/icon_for_call_number" />
+            app:srcCompat="@drawable/ic_call" />
+
+        <Spinner
+            android:id="@+id/telephone_types_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/gray"
+            android:contentDescription="@string/telephone_type"
+            android:minHeight="48dp"
+            app:layout_constraintBottom_toBottomOf="@id/editTextPhone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/editTextPhone"
+            app:layout_constraintTop_toTopOf="@id/editTextPhone" />
 
         <EditText
             android:id="@+id/editTextPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
-            app:layout_constraintTop_toBottomOf="@id/tv_phone"
-            android:hint="@string/phone"
+            android:autofillHints="phone"
             android:ems="10"
-            android:inputType="phone" />
+            android:hint="@string/phone"
+            android:inputType="phone"
+            android:minHeight="48dp"
+            android:textColorHint="@color/gray"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
+            app:layout_constraintTop_toBottomOf="@id/tv_phone" />
 
         <TextView
             android:id="@+id/tv_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:typeface="serif"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:text="@string/email"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:typeface="serif"
             app:layout_constraintBottom_toBottomOf="@id/iv_email"
             app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
             app:layout_constraintTop_toTopOf="@id/iv_email" />
@@ -204,40 +233,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24sp"
+            android:contentDescription="@string/icon_for_email"
             app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text_center"
             app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image_center"
             app:layout_constraintTop_toBottomOf="@id/editTextPhone"
-            app:srcCompat="@drawable/ic_email"
-            android:contentDescription="@string/icon_for_email" />
+            app:srcCompat="@drawable/ic_email" />
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
-            app:layout_constraintTop_toBottomOf="@id/tv_email"
-            android:hint="@string/email"
+            android:autofillHints="emailAddress"
             android:ems="10"
-            android:inputType="textEmailAddress" />
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:textColorHint="@color/gray"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
+            app:layout_constraintTop_toBottomOf="@id/tv_email" />
 
         <Button
             android:id="@+id/btn_cancel"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
             android:layout_width="120dp"
             android:layout_height="50dp"
+            android:text="@string/cancel"
             app:layout_constraintBottom_toTopOf="@id/gl_left_horizontal_bottom"
-            app:layout_constraintStart_toEndOf="@+id/gl_left_vertical_text_center"
             app:layout_constraintEnd_toStartOf="@id/btn_save"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
-            android:text="@string/cancel" />
+            app:layout_constraintStart_toEndOf="@+id/gl_left_vertical_text_center" />
 
         <Button
             android:id="@+id/btn_save"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
             android:layout_width="120dp"
             android:layout_height="50dp"
+            android:text="@string/save"
             app:layout_constraintBottom_toTopOf="@id/gl_left_horizontal_bottom"
-            app:layout_constraintStart_toEndOf="@id/btn_cancel"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
-            android:text="@string/save" />
+            app:layout_constraintStart_toEndOf="@id/btn_cancel" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
