--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="contactViewModel"
             type="org.test.myapplication.viewmodel.ContactViewModel" />
@@ -31,15 +32,15 @@
                     android:id="@+id/idIVContact"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:background="@color/gray"
+                    android:background="@color/gray_dark"
+                    android:contentDescription="@string/contact_icon"
                     android:paddingTop="50dp"
                     android:src="@drawable/ic_person"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/white"
-                    android:contentDescription="@string/contact_icon" />
+                    app:tint="@color/white" />
 
                 <!--cardview for displaying user contact-->
                 <TextView
@@ -47,14 +48,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="75dp"
                     android:layout_below="@id/idIVContact"
-                    android:background="@color/gray"
+                    android:background="@color/gray_dark"
                     android:gravity="center|top"
                     android:padding="8dp"
+                    android:text="@{contactViewModel.getContactFullName(contact)}"
                     android:textColor="@color/white"
-                    android:typeface="serif"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:text="@{contactViewModel.getContactFullName(contact)}"
+                    android:typeface="serif"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -88,14 +89,14 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
+                            android:contentDescription="@string/call"
                             android:onClick="@{() -> contactViewModel.makeCall(contact)}"
                             android:padding="4dp"
                             android:src="@drawable/ic_call"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@id/idIVMessage"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:tint="@color/yellow"
-                            android:contentDescription="@string/call" />
+                            app:tint="@color/yellow" />
 
                         <TextView
                             android:id="@+id/idTVPhone"
@@ -104,11 +105,11 @@
                             android:layout_marginStart="12dp"
                             android:layout_marginTop="12dp"
                             android:paddingTop="12dp"
-                            android:typeface="serif"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
-                            android:text="@string/Mobile"
+                            android:text="@{contact.telephoneType}"
                             android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:typeface="serif"
                             app:layout_constraintBottom_toTopOf="@id/idTVPhoneNumber"
                             app:layout_constraintStart_toStartOf="parent" />
 
@@ -121,11 +122,11 @@
                             android:layout_marginTop="8dp"
                             android:layout_toStartOf="@id/idIVCall"
                             android:paddingBottom="12dp"
-                            android:typeface="serif"
-                            android:textStyle="normal"
-                            android:textSize="14sp"
                             android:text="@{contact.contactNumber}"
                             android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                            android:textSize="14sp"
+                            android:textStyle="normal"
+                            android:typeface="serif"
                             app:layout_constraintRight_toLeftOf="@id/idIVCall"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/idTVPhone" />
@@ -139,14 +140,14 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
+                            android:contentDescription="@string/message"
                             android:onClick="@{() -> contactViewModel.sendMessage(contact)}"
                             android:padding="4dp"
                             android:src="@drawable/ic_sms"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:tint="@color/yellow"
-                            android:contentDescription="@string/message" />
+                            app:tint="@color/yellow" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -177,11 +178,11 @@
                             android:layout_marginStart="12dp"
                             android:layout_marginTop="12dp"
                             android:paddingTop="12dp"
-                            android:typeface="serif"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
                             android:text="@string/email"
                             android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:typeface="serif"
                             app:layout_constraintBottom_toTopOf="@id/idTVEmail_address"
                             app:layout_constraintStart_toStartOf="parent" />
 
@@ -194,11 +195,11 @@
                             android:layout_marginTop="8dp"
                             android:layout_toStartOf="@id/idIVEmail"
                             android:paddingBottom="12dp"
-                            android:typeface="serif"
-                            android:textStyle="normal"
-                            android:textSize="14sp"
                             android:text="@{contact.contactEmail}"
                             android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                            android:textSize="14sp"
+                            android:textStyle="normal"
+                            android:typeface="serif"
                             app:layout_constraintRight_toLeftOf="@id/idIVEmail"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/idTVEmail" />
@@ -212,14 +213,14 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
+                            android:contentDescription="@string/email"
                             android:onClick="@{() -> contactViewModel.sendEmail(contact)}"
                             android:padding="4dp"
                             android:src="@drawable/ic_email"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:tint="@color/yellow"
-                            android:contentDescription="@string/email" />
+                            app:tint="@color/yellow" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -230,9 +231,9 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             app:menu="@menu/bottom_navigation_menu" />
 
     </RelativeLayout>
