--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -16,11 +16,11 @@
     </data>
 
     <RelativeLayout
-        android:layout_width="match_parent"
         android:id="@+id/item_recycler"
-        android:padding="16dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> contactViewModel.onClickContactListItems(contact)}">
+        android:onClick="@{() -> contactViewModel.onClickContactListItems(contact)}"
+        android:padding="16dp">
 
 
         <ImageView
@@ -31,9 +31,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/contact_image_in_recycler_view"
             android:padding="3dp"
-            android:src="@mipmap/ic_launcher"
-            android:contentDescription="@string/contact_image_in_recycler_view" />
+            android:src="@drawable/ic_person" />
 
         <TextView
             android:id="@+id/contact_name_recycler"
@@ -43,8 +43,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/contact_image"
             android:layout_toStartOf="@id/checkbox"
+            android:layout_toEndOf="@id/contact_image"
             android:text="@string/name"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textSize="18sp"
@@ -55,8 +55,8 @@
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="8dp"
             app:srcCompat="@drawable/ic_unchecked" />
     </RelativeLayout>
