--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#424242</color>
+    <color name="dark_white">#CCCBCB</color>
+    <color name="gray">#757575</color>
+    <color name="gray_dark">#424242</color>
     <color name="gray_light">#5E5E5E</color>
     <color name="light_green">#15b76c</color>
     <color name="blue">#41b6e6</color>
